include/xprb.h

/**************************** Function prototypes ****************************/
/**** Initialization/termination ****/
int XB_CC xbslinit(void);
int XB_CC xbslfinish(void);
const char * XB_CC xbgetversion(void);
/**** Problem definition ****/
struct Xbprob * XB_CC xbnewprob(const char *name);
struct xo_prob_struct * XB_CC xbgetsprob_prob(struct Xbprob *prob);
struct Xbprob * XB_CC xbgetprob(void);
int XB_CC xbsetdelayed(struct Xbctr *lct, int dstat);
int XB_CC xbsetindicator(struct Xbctr *lct, int dir, struct Xbvar *var);
int XB_CC xbsetincvars(struct Xbctr *lct, int ivstat);
/* defining solutions */
struct Xbsol * XB_CC xbnewsol_prob(struct Xbprob *prob);
int XB_CC xbdelsol(struct Xbsol *sol);
int XB_CC xbsetsolvar(struct Xbsol *sol, const struct Xbvar *var, double val);
int XB_CC xbdelsolvar(struct Xbsol *sol, const struct Xbvar *var);
int XB_CC xbgetsolvar(struct Xbsol *sol, const struct Xbvar *var, double *val);
int XB_CC xbgetsolsize(struct Xbsol *sol);
/**** Output and printing ****/
int XB_CC xbprintprob_prob(struct Xbprob *prob);
int XB_CC xbprintobj_prob(struct Xbprob *prob);
int XB_CC xbexportprob_prob(struct Xbprob *prob, int format, const char *filename);
int XB_CC xbloadmat_prob(struct Xbprob *prob);
int XB_CC xbprintvar(struct Xbvar *var);
int XB_CC xbprintctr(struct Xbctr *lct);
int XB_CC xbprintsos(struct Xbsos *ls);
int XB_CC xbprintidxset(struct Xbidxset *idx);
  
int XB_CC xbprintsol(struct Xbsol *sol);
int XB_CC xbgetcolnum(struct Xbvar *var);
int XB_CC xbgetrownum(struct Xbctr *lct);
int XB_CC xbgetvartype(struct Xbvar *var);
int XB_CC xbgetctrtype(struct Xbctr *lct);
int XB_CC xbgetctrsize(struct Xbctr *lct);
int XB_CC xbgetsostype(struct Xbsos *sos);
double XB_CC xbgetrhs(struct Xbctr *lct);
int XB_CC xbgetmodcut(struct Xbctr *lct);
int XB_CC xbgetdelayed(struct Xbctr *lct);
int XB_CC xbgetindicator(struct Xbctr *lct);
int XB_CC xbgetincvars(struct Xbctr *lct);
struct Xbvar * XB_CC xbgetindvar(struct Xbctr *lct);
int XB_CC xbgetbounds(struct Xbvar *var, double *lbd, double *ubd);
int XB_CC xbgetlim(struct Xbvar *var, double *lim);
      
int XB_CC xbgetrange(struct Xbctr *lct, double *low, double *up);
 
struct Xbbasis* XB_CC xbsavebasis_prob(struct Xbprob *prob);
int XB_CC xbloadbasis(struct Xbbasis *basis);
void XB_CC xbdelbasis(struct Xbbasis *basis);
/**** Problem solving and solution information ****/
int XB_CC xblpoptimize_prob(struct Xbprob *prob, const char *alg);
int XB_CC xbmipoptimize_prob(struct Xbprob *prob, const char *alg);
int XB_CC xbsolve_prob(struct Xbprob *prob, const char *alg);
int XB_CC xbminim_prob(struct Xbprob *prob, const char *alg);
int XB_CC xbmaxim_prob(struct Xbprob *prob, const char *alg);
int XB_CC xbloadmipsol_prob(struct Xbprob *prob, double *sol, int ncol, int ifopt);
int XB_CC xbaddmipsol_prob(struct Xbprob *prob, struct Xbsol *sol, const char *name);
int XB_CC xbgetprobstat_prob(struct Xbprob *prob);
int XB_CC xbgetlpstat_prob(struct Xbprob *prob);
int XB_CC xbgetmipstat_prob(struct Xbprob *prob);
int XB_CC xbsync_prob(struct Xbprob *prob, int synctype);
int XB_CC xbbegincb_prob(struct Xbprob *prob, struct xo_prob_struct *optprob);
int XB_CC xbendcb_prob(struct Xbprob *prob);
double XB_CC xbgetobjval_prob(struct Xbprob *prob);
double XB_CC xbgetsol(struct Xbvar *var);
double XB_CC xbgetrcost(struct Xbvar *var);
double XB_CC xbgetslack(struct Xbctr *lct);
double XB_CC xbgetact(struct Xbctr *lct);
double XB_CC xbgetdual(struct Xbctr *lct);
double XB_CC xbgetctrrng(struct Xbctr *lct,int what);
double XB_CC xbgetvarrng(struct Xbvar *var,int what);
int XB_CC xbwritesol_prob(struct Xbprob *prob, const char *filename, const char *flags);
int XB_CC xbwritebinsol_prob(struct Xbprob *prob, const char *filename, const char *flags);
int XB_CC xbwriteslxsol_prob(struct Xbprob *prob, const char *filename, const char *flags);
int XB_CC xbwriteprtsol_prob(struct Xbprob *prob, const char *filename, const char *flags);
int XB_CC xbreadbinsol_prob(struct Xbprob *prob, const char *filename, const char *flags);
int XB_CC xbreadslxsol_prob(struct Xbprob *prob, const char *filename, const char *flags);
int XB_CC xbprintexpr(struct Xbprob *,struct Xbexpr *,int,double);
/****2.2.x****/

/**** Initialization/termination ****/
#define XPRBinit xbslinit
#define XPRBfinish xbslfinish
#define XPRBfree xbslfinish
#define XPRBgetversion xbgetversion
/**** Error handling ****/
#define XPRBseterrctrl xbseterrctrl
#define XPRBdefcberr xbdefcberr_prob
/**** Problem definition ****/
#define XPRBnewprob xbnewprob
#define XPRBgetXPRSprob xbgetsprob_prob
#define XPRBgetprob xbgetprob
/**** Output and printing ****/
#define XPRBdefcbmsg xbdefcbmsg_prob
#define XPRBsetmsglevel xbsetmsglevel_prob
#define XPRBsetrealfmt xbsetrealfmt_prob
/**** Problem definition ****/
#define XPRBdelprob xbdelprob_prob
#define XPRBsetprobname xbsetprobname_prob
#define XPRBsetincvars xbsetincvars
#define XPRBsetdelayed xbsetdelayed
#define XPRBsetindicator xbsetindicator
#define XPRBprintvar xbprintvar
#define XPRBprintctr xbprintctr
#define XPRBprintsos xbprintsos
#define XPRBprintidxset xbprintidxset
#define XPRBgetcolnum xbgetcolnum
#define XPRBgetrownum xbgetrownum
#define XPRBgetvartype xbgetvartype
#define XPRBgetctrtype xbgetctrtype
#define XPRBgetctrsize xbgetctrsize
#define XPRBgetsostype xbgetsostype
#define XPRBgetrhs xbgetrhs
#define XPRBgetmodcut xbgetmodcut
#define XPRBgetdelayed xbgetdelayed
#define XPRBgetincvars xbgetincvars
#define XPRBgetindicator xbgetindicator
#define XPRBgetindvar xbgetindvar
#define XPRBgetbounds xbgetbounds
#define XPRBgetlim xbgetlim      
#define XPRBgetctrrng  xbgetctrrng 
#define XPRBgetvarrng  xbgetvarrng 
#define XPRBgetrange  xbgetrange 
#define XPRBloadbasis xbloadbasis
#define XPRBdelbasis xbdelbasis
#define XPRBloadmipsol xbloadmipsol_prob
#define XPRBaddmipsol xbaddmipsol_prob
#define XPRBgetsol xbgetsol
#define XPRBgetrcost xbgetrcost
#define XPRBgetslack xbgetslack
#define XPRBgetact xbgetact
#define XPRBgetdual xbgetdual
#define XPRBsetcolorder xbsetcolorder_prob
#define XPRBfixglobals xbfixglobals_prob
#define XPRBdelsol xbdelsol
#define XPRBsetsolvar xbsetsolvar
#define XPRBdelsolvar xbdelsolvar
#define XPRBgetsolsize xbgetsolsize
#define XPRBprintsol xbprintsol