include/xprb.bas


'*** Output and printing ***
Private Declare PtrSafe Function xbprintprob Lib "xprb" Alias "xbprintprob_prob" (ByVal prob As LongPtr) As Long
Private Declare PtrSafe Function xbprintobj Lib "xprb" Alias "xbprintobj_prob" (ByVal prob As LongPtr) As Long
Private Declare PtrSafe Function xbexportprob Lib "xprb" Alias "xbexportprob_prob" (ByVal prob As LongPtr, ByVal typ As Long, ByVal filename As String) As Long

Declare PtrSafe Function XPRBprintvar Lib "xprb" Alias "xbprintvar" (ByVal v As LongPtr) As Long
Declare PtrSafe Function XPRBprintctr Lib "xprb" Alias "xbprintctr" (ByVal lct As LongPtr) As Long
Declare PtrSafe Function XPRBprintsos Lib "xprb" Alias "xbprintsos" (ByVal ls As LongPtr) As Long
Declare PtrSafe Function XPRBprintidxset Lib "xprb" Alias "xbprintidxset" (ByVal idx As LongPtr) As Long
Declare PtrSafe Function XPRBprintexpr Lib "xprb" Alias "xbprintexpr" (ByVal prob As LongPtr, ByVal tls As LongPtr, ByVal nl As Long, ByVal dbl As Double) As Long

'*** Information on variables and constraints ***
Declare PtrSafe Function XPRBgetcolnum Lib "xprb" Alias "xbgetcolnum" (ByVal v As LongPtr) As Long
Declare PtrSafe Function XPRBgetrownum Lib "xprb" Alias "xbgetrownum" (ByVal lct As LongPtr) As Long
Declare PtrSafe Function XPRBgetvartype Lib "xprb" Alias "xbgetvartype" (ByVal v As LongPtr) As Long
Declare PtrSafe Function XPRBgetctrtype Lib "xprb" Alias "xbgetctrtype" (ByVal lct As LongPtr) As Long
Declare PtrSafe Function XPRBgetctrsize Lib "xprb" Alias "xbgetctrsize" (ByVal lct As LongPtr) As Long
Declare PtrSafe Function XPRBgetsostype Lib "xprb" Alias "xbgetsostype" (ByVal sos As LongPtr) As Long
Declare PtrSafe Function XPRBgetrhs Lib "xprb" Alias "xbgetrhs" (ByVal lct As LongPtr) As Double
Declare PtrSafe Function XPRBgetmodcut Lib "xprb" Alias "xbgetmodcut" (ByVal lct As LongPtr) As Long
Declare PtrSafe Function XPRBgetbounds Lib "xprb" Alias "xbgetbounds" (ByVal v As Long, ByRef lbd As Double, ByRef ubd As Double) As Long
Declare PtrSafe Function XPRBgetlim Lib "xprb" Alias "xbgetlim" (ByVal v As LongPtr, lim As Double) As Long
Declare PtrSafe Function XPRBgetrange Lib "xprb" Alias "xbgetrange" (ByVal lct As LongPtr, ByRef low As Double, ByRef up As Double) As Long

'*** Basis management ***
Private Declare PtrSafe Function xbsavebasis Lib "xprb" Alias "xbsavebasis_prob" (ByVal prob As LongPtr) As LongPtr
Declare PtrSafe Function XPRBloadbasis Lib "xprb" Alias "xbloadbasis" (ByVal basis As LongPtr) As Long
Declare PtrSafe Sub XPRBdelbasis Lib "xprb" Alias "xbdelbasis" (ByVal basis As LongPtr)

'*** Problem solving and solution information ***
Private Declare PtrSafe Function xbloadmat Lib "xprb" Alias "xbloadmat_prob" (ByVal prob As LongPtr) As Long
Private Declare PtrSafe Function xbsolve Lib "xprb" Alias "xbsolve_prob" (ByVal prob As LongPtr, ByVal alg As String) As Long
Private Declare PtrSafe Function xbminim Lib "xprb" Alias "xbminim_prob" (ByVal prob As LongPtr, ByVal alg As String) As Long
Private Declare PtrSafe Function xbmaxim Lib "xprb" Alias "xbmaxim_prob" (ByVal prob As LongPtr, ByVal alg As String) As Long
Private Declare PtrSafe Function xblpoptimize Lib "xprb" Alias "xblpoptimize_prob" (ByVal prob As LongPtr, ByVal alg As String) As Long
Private Declare PtrSafe Function xbmipoptimize Lib "xprb" Alias "xbmipoptimize_prob" (ByVal prob As LongPtr, ByVal alg As String) As Long
Private Declare PtrSafe Function xbgetprobstat Lib "xprb" Alias "xbgetprobstat_prob" (ByVal prob As LongPtr) As Long
Private Declare PtrSafe Function xbgetlpstat Lib "xprb" Alias "xbgetlpstat_prob" (ByVal prob As LongPtr) As Long
Private Declare PtrSafe Function xbgetmipstat Lib "xprb" Alias "xbgetmipstat_prob" (ByVal prob As LongPtr) As Long
Private Declare PtrSafe Function xbsync Lib "xprb" Alias "xbsync_prob" (ByVal prob As LongPtr, ByVal synctype As Long) As Long
Private Declare PtrSafe Function xbbegincb Lib "xprb" Alias "xbbegincb_prob" (ByVal prob As LongPtr, ByVal optprob As LongPtr) As Long
Private Declare PtrSafe Function xbendcb Lib "xprb" Alias "xbendcb_prob" (ByVal prob As LongPtr) As Long
Private Declare PtrSafe Function xbgetobjval Lib "xprb" Alias "xbgetobjval_prob" (ByVal prob As LongPtr) As Double
Declare PtrSafe Function XPRBgetsol Lib "xprb" Alias "xbgetsol" (ByVal v As LongPtr) As Double
Declare PtrSafe Function XPRBgetrcost Lib "xprb" Alias "xbgetrcost" (ByVal v As LongPtr) As Double
Declare PtrSafe Function XPRBgetslack Lib "xprb" Alias "xbgetslack" (ByVal lct As LongPtr) As Double
Declare PtrSafe Function XPRBgetact Lib "xprb" Alias "xbgetact" (ByVal lct As LongPtr) As Double
Declare PtrSafe Function XPRBgetdual Lib "xprb" Alias "xbgetdual" (ByVal lct As LongPtr) As Double
Declare PtrSafe Function XPRBgetctrrng Lib "xprb" Alias "xbgetctrrng" (ByVal lct As LongPtr, ByVal rngtype As Long) As Double
Declare PtrSafe Function XPRBgetvarrng Lib "xprb" Alias "xbgetvarrng" (ByVal v As LongPtr, ByVal rngtype As Long) As Double

'*** Indicator constraints ***
Declare PtrSafe Function XPRBsetdelayed Lib "xprb" Alias "xbsetdelayed" (ByVal ctrRef As LongPtr, ByVal delayed As Long) As Long
Declare PtrSafe Function XPRBgetdelayed Lib "xprb" Alias "xbgetdelayed" (ByVal ctrRef As LongPtr) As Long
Declare PtrSafe Function XPRBsetindicator Lib "xprb" Alias "xbsetindicator" (ByVal ctrRef As LongPtr, ByVal dir As Long, ByVal varRef As LongPtr)
Declare PtrSafe Function XPRBgetindicator Lib "xprb" Alias "xbgetindicator" (ByVal ctrRef As LongPtr) As Long
Declare PtrSafe Function XPRBgetindvar Lib "xprb" Alias "xbgetindvar" (ByVal ctrRef As LongPtr) As LongPtr
Declare PtrSafe Function XPRBgetincvars Lib "xprb" Alias "xbgetincvars" (ByVal ctrRef As LongPtr) As Long
Declare PtrSafe Function XPRBsetincvars Lib "xprb" Alias "xbsetincvars" (ByVal ctrRef As LongPtr, ByVal ivstat As Long) As Long

'*** MIP solutions ***
Declare PtrSafe Function XPRBloadmipsol Lib "xprb" Alias "xbloadmipsol_prob" (ByVal probRef As LongPtr, ByRef sol As Double, ByVal ncol As Long, ByVal ifopt As Long) As Long
Declare PtrSafe Function XPRBaddmipsol Lib "xprb" Alias "xbaddmipsol_prob" (ByVal probRef As LongPtr, ByVal solRef As LongPtr, ByVal name As String) As Long

'*** Defining solutions
Private Declare PtrSafe Function xbnewsol Lib "xprb" Alias "xbnewsol_prob" (ByVal probRef As LongPtr) As LongPtr
Declare PtrSafe Function XPRBdelsol Lib "xprb" Alias "xbdelsol" (ByVal solRef As LongPtr) As Long
Declare PtrSafe Function XPRBsetsolvar Lib "xprb" Alias "xbsetsolvar" (ByVal solRef As LongPtr, ByVal varRef As LongPtr, ByVal val As Double) As Long
Declare PtrSafe Function XPRBdelsolvar Lib "xprb" Alias "xbdelsolvar" (ByVal solRef As LongPtr, ByVal varRef As LongPtr) As Long
Declare PtrSafe Function xbgetsolvar Lib "xprb" (ByVal solRef As LongPtr, ByVal varRef As LongPtr, ByRef val As Double) As Long
Declare PtrSafe Function XPRBgetsolsize Lib "xprb" Alias "xbgetsolsize" (ByVal solRef As LongPtr) As Long
Declare PtrSafe Function XPRBprintsol Lib "xprb" Alias "xbprintsol" (ByVal solRef As LongPtr) As Long

'*** Managing solutions
Private Declare PtrSafe Function xbwritesol Lib "xprb" Alias "xbwritesol_prob" (ByVal probRef As LongPtr, ByVal filename As String, ByVal flags As String) As Long
Private Declare PtrSafe Function xbwritebinsol Lib "xprb" Alias "xbwritebinsol_prob" (ByVal probRef As LongPtr, ByVal filename As String, ByVal flags As String) As Long
Private Declare PtrSafe Function xbwriteslxsol Lib "xprb" Alias "xbwriteslxsol_prob" (ByVal probRef As LongPtr, ByVal filename As String, ByVal flags As String) As Long
Private Declare PtrSafe Function xbwriteprtsol Lib "xprb" Alias "xbwriteprtsol_prob" (ByVal probRef As LongPtr, ByVal filename As String, ByVal flags As String) As Long
Private Declare PtrSafe Function xbreadbinsol Lib "xprb" Alias "xbreadbinsol_prob" (ByVal probRef As LongPtr, ByVal filename As String, ByVal flags As String) As Long
Private Declare PtrSafe Function xbreadslxsol Lib "xprb" Alias "xbreadslxsol_prob" (ByVal probRef As LongPtr, ByVal filename As String, ByVal flags As String) As Long

'*** String conversion ***
Private Declare PtrSafe Sub XPRadr2str Lib "xprvb" Alias "xvbadr2str" (ByVal adrstr As LongPtr, ByVal rts As String, ByVal rtslen As Long)
Private Declare PtrSafe Function XPRadrstrlen Lib "xprvb" Alias "xvbadrstrlen" (ByVal adrstr As LongPtr) As Long

'*****************************************************************

Function XPRBgetString(ByRef adrstr As LongPtr) As String
 Dim rts As String
 
 If (adrstr = 0) Then
  XPRBgetString = ""
 Else
  Dim slen As Long
  slen = XPRadrstrlen(adrstr)
  rts = String$(slen + 1, vbNullChar)
  XPRadr2str adrstr, rts, Len(rts)
  XPRBgetString = Left(rts, InStr(1, rts, vbNullChar) - 1)
 End If
End Function

'*** Init/Finish ***
Function XPRBinit(Optional ByRef d As String = vbNullString) As Long
 If initCount <= 0 Then
  XPRBseterrctrl 0
  If Not xvbhascbcontext(CBCON_MSG, XPRB_NULL) Then XPRBdefcbmsg XPRB_NULL, AddressOf XPRBcbmsgdefault
  If Not xvbhascbcontext(CBCON_err, XPRB_NULL) Then XPRBdefcberr XPRB_NULL, AddressOf XPRBcberrdefault
 End If
 
 Dim result As Long
 result = xbslinit()
 If result = 0 Then
   If initCount < 0 Then initCount = 0
   initCount = initCount + 1
 End If
 XPRBinit = result
End Function

Function XPRBfinish() As Long
 XPRBfinish = xbslfinish()
 
 If initCount <= 1 Then
  On Error Resume Next
  initCount = initCount - 1
  If initCount < 0 Then initCount = 0
  Dim context As Variant
  For Each context In cbcontexts
    context.Clear
  Next
 End If
End Function

Function XPRBfree() As Long
 XPRBfree = XPRBfinish()
End Function

Function XPRBgetversion() As String
 XPRBgetversion = XPRBgetString(xbgetversion())
End Function


'*** Problem creation ***
Function XPRBnewprob(Optional ByVal nam As String = vbNullString) As LongPtr
 If initCount <= 0 Then
  If XPRBinit Then
   XPRBnewprob = XPRB_NULL
   Exit Function
  End If
 End If
 XPRBnewprob = xbnewprob(nam)
End Function

'*** Problem definition ***
Function XPRBdelprob(Optional ByVal prob As LongPtr = 0) As Long
 If prob = 0 Then
  XPRBdelprob = xbdelprob(XPRBgetprob())
 Else
  XPRBdelprob = xbdelprob(prob)
 End If
End Function

Function XPRBsetprobname(Optional ByVal prob As LongPtr = 0, Optional ByVal name As String = vbNullString) As Long
  If prob = 0 Then
    XPRBsetprobname = xbsetprobname(XPRBgetprob(), name)
  Else
    XPRBsetprobname = xbsetprobname(prob, name)
  End If
End Function

Function XPRBgetXPRSprob(Optional ByVal prob As LongPtr = 0) As LongPtr
 If prob = 0 Then
  XPRBgetXPRSprob = xbgetXPRSprob(XPRBgetprob())
 Else
  XPRBgetXPRSprob = xbgetXPRSprob(prob)
 End If
End Function

Function XPRBsetmsglevel(Optional ByVal prob As LongPtr = 0, Optional ByVal level As Long = 2) As Long
 If prob = 0 Then
  XPRBsetmsglevel = xbsetmsglevel(XPRBgetprob(), level)
 Else
  XPRBsetmsglevel = xbsetmsglevel(prob, level)
 End If
End Function

Function XPRBsetrealfmt(Optional ByVal prob As LongPtr = 0, Optional ByVal fmt As String) As Long
 If prob = 0 Then
  XPRBsetrealfmt = xbsetrealfmt(XPRBgetprob(), fmt)
 Else
  XPRBsetrealfmt = xbsetrealfmt(prob, fmt)
 End If
End Function

Function XPRBsetcolorder(Optional ByVal prob As LongPtr = 0, Optional ByVal num As Long = 0) As Long
 If prob = 0 Then
  XPRBsetcolorder = xbsetcolorder(XPRBgetprob(), num)
 Else
  XPRBsetcolorder = xbsetcolorder(prob, num)
 End If
End Function

Function XPRBfixglobals(Optional ByVal prob As LongPtr = 0, Optional ByVal ifRound As Long = 0) As Long
 If prob = 0 Then
  XPRBfixglobals = xbfixglobals(XPRBgetprob(), ifRound)
 Else
  XPRBfixglobals = xbfixglobals(prob, ifRound)
 End If
End Function


